infra/k8s/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catan-server
spec:
  replicas: 2
  selector:
    matchLabels:
      app: catan-server
  template:
    metadata:
      labels:
        app: catan-server
    spec:
      containers:
        - name: server
          image: catan/server:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: catan-server
spec:
  selector:
    app: catan-server
  ports:
    - port: 8080
      targetPort: 8080
