infra/k8s/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catan-web
spec:
  replicas: 2
  selector:
    matchLabels:
      app: catan-web
  template:
    metadata:
      labels:
        app: catan-web
    spec:
      containers:
        - name: web
          image: catan/web:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: catan-web
spec:
  selector:
    app: catan-web
  ports:
    - port: 80
      targetPort: 80
